--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.2",
+    "recharts": "^2.10.4",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
